@@ -396,6 +396,24 @@ input device
 """],
     ]
 
+totest['citation'] = [
+        [""".. [docutils] blah blah blah
+.. [empty_citation]
+""",
+        r""".\" Man page generated from reStructuredText.
+.
+.TH ""  "" "" ""
+.SH NAME
+ \- 
+"""+indend_macros+
+r""".IP [docutils] 5
+blah blah blah
+.IP [empty_citation] 5
+.\" Generated by docutils manpage writer.
+.
+"""],
+    ]
+
 
 if __name__ == '__main__':
     import unittest
